--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@stoplight/spectral": "^4.0.2",
     "@stoplight/yaml": "^3.5.0",
     "axios": "^0.19.0",
+    "inquirer": "^7.0.1",
     "js-yaml": "^3.13.1",
-    "prompt": "^1.0.0",
     "stoplight": "0.0.7"
   },
   "devDependencies": {
