--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   },
   "bugs": "https://github.com/deastland/fortellis-cli/issues",
   "dependencies": {
-    "@cdkglobal/fortellis-dev-utils": "^1.9.0",
     "@oclif/command": "^1.5.19",
     "@oclif/config": "^1.13.3",
     "@oclif/plugin-help": "^2.2.2",
-    "@stoplight/spectral": "^4.0.2",
-    "@stoplight/yaml": "^3.5.0",
+    "@stoplight/spectral": "4.0.2",
+    "@stoplight/yaml": "3.5.0",
     "axios": "^0.19.0",
+    "colors": "^1.4.0",
     "inquirer": "^7.0.1",
     "js-yaml": "^3.13.1",
     "stoplight": "0.0.7"
