--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "stoplight": "0.0.7"
   },
   "devDependencies": {
+    "@fortellis/eslint-config": "^1.0.4",
     "@oclif/dev-cli": "^1.22.2",
     "@oclif/test": "^1.2.5",
     "chai": "^4.2.0",
@@ -65,9 +66,9 @@
     "postpack": "rm -f oclif.manifest.json",
     "prepack": "oclif-dev manifest && oclif-dev readme",
     "test": "nyc mocha --forbid-only \"test/**/*.test.js\"",
-    "version": "oclif-dev readme && git add README.md",
-    "lint": "eslint '**/*.{js,json}' --fix",
-    "format": "prettier-eslint '**/*.{js,json}' --write"
+    "lint": "eslint --fix **/*.{js,json}",
+    "format": "prettier-eslint '**/*.{js,json}' --write",
+    "version": "oclif-dev readme && git add README.md"
   },
   "lint-staged": {
     "**/*.{js,json}": [
@@ -78,7 +79,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm upgrade eslint-config-fortellis-platform && lint-staged"
+      "pre-commit": "git secrets --pre_commit_hook -- $@ && npm upgrade @fortellis/eslint-config && lint-staged"
     }
   }
 }
