--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "postpack": "rm -f oclif.manifest.json",
     "prepack": "oclif-dev manifest && oclif-dev readme",
     "test": "nyc mocha --forbid-only \"test/**/*.test.js\"",
-    "lint": "eslint --fix **/*.{js,json}",
+    "lint": "eslint '**/*.{js,json}' --fix",
     "format": "prettier-eslint '**/*.{js,json}' --write",
     "version": "oclif-dev readme && git add README.md"
   },
