--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,15 @@
 {
-  "extends": ["oclif", "eslint-config-fortellis-platform"]
+  "extends": ["oclif","eslint:recommended"],
+  "env": {
+    "node": true,
+    "es6": true,
+    "jest": true
+  },
+  "parserOptions": {
+    "ecmaVersion": 2018
+  },
+  "plugins": ["promise", "json"],
+  "rules": {
+    "no-unused-vars": ["error", { "ignoreRestSiblings": true }]
+  }
 }
