--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "git secrets --pre_commit_hook -- $@ && npm upgrade @fortellis/eslint-config && lint-staged"
+      "pre-commit": "git secrets --pre_commit_hook -- $@ && lint-staged"
     }
   }
 }
