--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "fortellis-cli",
+  "name": "@fortellis/fortellis-cli",
   "description": "Command Line for Fortellis API Specs",
   "version": "0.0.1-alpha.0",
   "author": "Fortellis",
   "bin": {
     "fortellis-cli": "./bin/run"
   },
-  "bugs": "https://github.com/Fortellis/fortellis-cli/issues",
+  "bugs": {
+    "url": "https://github.com/Fortellis/fortellis-cli/issues"
+  },
   "dependencies": {
     "@oclif/command": "^1.5.19",
     "@oclif/config": "^1.13.3",
@@ -48,7 +50,8 @@
   ],
   "homepage": "https://github.com/Fortellis/fortellis-cli",
   "keywords": [
-    "oclif"
+    "oclif",
+    "fortellis"
   ],
   "license": "MIT",
   "main": "src/index.js",
@@ -59,7 +62,10 @@
       "@oclif/plugin-help"
     ]
   },
-  "repository": "https://github.com/Fortellis/fortellis-cli.git",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Fortellis/fortellis-cli.git"
+  },
   "scripts": {
     "test": "nyc mocha --forbid-only \"test/**/*.test.js\"",
     "lint": "eslint '**/*.{js,json}' --fix",
