Features Added * Results are now sorted first by severity and then by line number. * The `api-lint` command now has a `display-severity` flag which fliters the severity of displayed results.
Unit Tests
* Updated for new features.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
-package-lock.json
-.gitignore
-# Dependency directories
+# node dependency directories
 node_modules/
 
 # nyc test coverage
 .nyc_output
+
+# visual studio code
+.vscode
+.editorconfig
 
 # output 
 bin
