--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@oclif/config": "^1.13.3",
     "@oclif/plugin-help": "^2.2.2",
     "@stoplight/spectral": "4.0.2",
+    "@stoplight/types": "^11.4.0",
     "@stoplight/yaml": "3.5.0",
     "axios": "^0.19.0",
     "colors": "^1.4.0",
     "globby": "^10.0.1",
     "inquirer": "^7.0.1",
     "js-yaml": "^3.13.1",
+    "lodash": "^4.17.15",
     "request": "^2.88.0",
     "stoplight": "0.0.7"
   },
