--- a/src/resources/pet-adoption-v1.0.0.yaml
+++ b/src/resources/pet-adoption-v1.0.0.yaml
@@ -105,6 +105,14 @@ paths:
           $ref: '#/responses/ServiceNotAvailable'
 
 parameters:
+  header.Authorization:
+    name: Authorization
+    in: header
+    type: string
+    description: | 
+      Contains credentials that allows the caller to authenicate itself with the 
+      API. See RFC 7235 and RFC 7617 for more details.
+
   query.name:
     name: name
     in: query
