--- a/src/resources/pet-adoption-v1.0.0.yaml
+++ b/src/resources/pet-adoption-v1.0.0.yaml
@@ -33,6 +33,7 @@ paths:
       tags: 
         - adopt
       parameters:
+        - $ref: '#/parameters/header.Authorization'
         - $ref: '#/parameters/query.name'
         - $ref: '#/parameters/query.breed'
         - $ref: '#/parameters/query.page'
@@ -51,7 +52,7 @@ paths:
         403:
           $ref: '#/responses/Forbidden'
         503: 
-          $ref: '#/responses/ServiceNotAvailable'
+          $ref: '#/responses/ServiceUnavailable'
 
     post:
       summary: Adds a pet to the store
@@ -60,6 +61,7 @@ paths:
       tags:
         - manage
       parameters:
+        - $ref: '#/parameters/header.Authorization'
         - $ref: '#/parameters/body.AddUpdatePet'
       consumes:
         - application/json
@@ -75,7 +77,7 @@ paths:
         403:
           $ref: '#/responses/Forbidden'
         503: 
-          $ref: '#/responses/ServiceNotAvailable'
+          $ref: '#/responses/ServiceUnavailable'
 
   /pets/{petId}:
     get:
@@ -85,6 +87,7 @@ paths:
       tags: 
         - adopt
       parameters:
+        - $ref: '#/parameters/header.Authorization'
         - $ref: '#/parameters/path.petId'
       consumes:
         - application/json
@@ -102,7 +105,7 @@ paths:
         404:
           $ref: '#/responses/NotFound'
         503: 
-          $ref: '#/responses/ServiceNotAvailable'
+          $ref: '#/responses/ServiceUnavailable'
 
 parameters:
   header.Authorization:
