Changes * Operation objects must now declare the Request-Id header parameter as requried.  This is temporary for the NADA demo and will be removed afterwards.

--- a/src/resources/pet-adoption-v1.0.0.yaml
+++ b/src/resources/pet-adoption-v1.0.0.yaml
@@ -176,6 +176,7 @@ parameters:
     in: header
     type: string
     format: uuid
+    required: true
     description: |
       A correlation ID that should be returned back to the caller to 
       indicate the return of the given request
