--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-json": "^2.0.1",
     "eslint-plugin-promise": "^4.2.1",
     "husky": "^4.0.6",
+    "jest": "^24.8.0",
     "lint-staged": "^9.5.0",
     "mocha": "^5.2.0",
     "nyc": "^14.1.1",
@@ -69,10 +70,17 @@
     "url": "git+https://github.com/Fortellis/fortellis-cli.git"
   },
   "scripts": {
+    "jest-test": "jest",
     "test": "nyc mocha --forbid-only \"test/**/*.test.js\"",
     "lint": "eslint '**/*.{js,json}' --fix",
     "format": "prettier-eslint '**/*.{js,json}' --write",
     "version": "oclif-dev readme && git add README.md"
+  },
+  "jest": {
+    "collectCoverage": true,
+    "coverageReporters": [
+      "lcov"
+    ]
   },
   "lint-staged": {
     "**/*.{js,json}": [
