--- a/src/config/.env.prod
+++ b/src/config/.env.prod
@@ -1,5 +1,5 @@
 # services
 FORTELLIS_SESSION_SERVER=https://api.accounts.fortellis.io/api/v1/authn
-FORTELLIS_AUTHORIZATION_SERVER=https://api.identity.fortellis.io/oauth2/aus1ni5i9n9WkzcYa2p7/v1/authorize
+FORTELLIS_AUTHORIZATION_SERVER=https://identity.fortellis.io/oauth2/aus1p1ixy7YL8cMq02p7/v1/authorize
 FORTELLIS_SPEC_SERVICE_PUSH=https://specifications.fortellis.io/cli/spec
 FORTELLIS_ORG_SERVICE_LIST=https://organizations.fortellis.io/v1/organizations
